deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ganesha
  labels:
    app.kubernetes.io/name: ganesha
