deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ganesha
  labels:
    app.kubernetes.io/name: ganesha
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ganesha
  ports:
    - name: http
      port: 8080
      targetPort: http
